# img2Drawio

./: .gitignore  AGENTS.md  README.md  config.example.yaml  config.yaml.example  pyproject.toml
src/img2drawio/: __init__.py  cli.py  models.py
src/img2drawio/config/: __init__.py  settings.py
src/img2drawio/export/: drawio.py
src/img2drawio/postprocess/: relationships.py
src/img2drawio/recognition/: base.py  ocr.py  vlm.py  yolo.py
tests/: test_vlm_parsing.py
